fix(style): bc-list not showing check boxes because of display inline-block

--- a/app/styles/components/bc-list.scss
+++ b/app/styles/components/bc-list.scss
@@ -290,7 +290,7 @@ $image-size: 40px;
 
 						& > .list-extra {
 							@include bc-transition(width .5s ease-in);
-							display: inline-block;
+							display: table-cell;
 							height: 100%;
 
 							& > .select {
